--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -24,3 +24,19 @@
 .button-image:hover {
     border: 1px solid black;
 }
+
+.button-square {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    color: black;
+    background-color: white;
+    width: 2rem;
+    height: 2rem;
+    text-align: center;
+    justify-content: center;
+    border: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
