--- a/src/components/Total.css
+++ b/src/components/Total.css
@@ -12,7 +12,7 @@
     width: 100%;
     text-align: left;
     padding: 1rem;
-    margin: 0rem;
+    margin: 0rem 0rem 1rem 0rem;
     border-bottom: 1px solid #d9d9d9;
     border-collapse: collapse;
     border: 1px solid #d9d9d9;
